[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts-C/Novel/Dialogo.gd" type="Script" id=1]
[ext_resource path="res://Imagens/Backgrounds/Novel/bg_entrada.jpg" type="Texture" id=2]
[ext_resource path="res://Scripts-C/Novel/Background.gd" type="Script" id=3]
[ext_resource path="res://Imagens/Objetos/Novel/pe√ßa de encaixe.png" type="Texture" id=4]
[ext_resource path="res://Imagens/Grid 12.png" type="Texture" id=5]
[ext_resource path="res://Imagens/Objetos/Novel/balao fala.png" type="Texture" id=6]
[ext_resource path="res://Fontes/FontGodot/Dialogo.tres" type="DynamicFont" id=7]
[ext_resource path="res://Imagens/Objetos/Novel/balao personagem.png" type="Texture" id=8]
[ext_resource path="res://Fontes/FontGodot/Personagem.tres" type="DynamicFont" id=9]
[ext_resource path="res://Imagens/Botoes/seguinte.png" type="Texture" id=10]
[ext_resource path="res://Imagens/Botoes/seguinte_c.png" type="Texture" id=11]
[ext_resource path="res://Imagens/Botoes/seguinte_h.png" type="Texture" id=12]
[ext_resource path="res://Imagens/Objetos/Disciplinas/borda azul.png" type="Texture" id=13]
[ext_resource path="res://Imagens/Objetos/Disciplinas/borda rosa01.png" type="Texture" id=14]
[ext_resource path="res://Imagens/Objetos/Disciplinas/borda rosa.png" type="Texture" id=15]
[ext_resource path="res://Cenas/MenuSup.tscn" type="PackedScene" id=16]

[node name="Dialogo" type="Control"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )
stretch_mode = 1
script = ExtResource( 3 )

[node name="Encaixe" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 4 )

[node name="Grid 12" type="TextureRect" parent="."]
visible = false
margin_left = -1.40355
margin_top = -0.138977
margin_right = 1918.6
margin_bottom = 1079.86
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Personagens" type="Control" parent="."]
editor/display_folded = true
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Area1" type="TextureRect" parent="Personagens"]
margin_left = 254.0
margin_top = 225.0
margin_right = 567.0
margin_bottom = 1085.0

[node name="Area2" type="TextureRect" parent="Personagens"]
margin_left = 724.998
margin_top = 225.0
margin_right = 1038.0
margin_bottom = 1085.0

[node name="Area3" type="TextureRect" parent="Personagens"]
margin_left = 1196.0
margin_top = 225.0
margin_right = 1509.0
margin_bottom = 1085.0

[node name="CaixaDialogo" type="TextureRect" parent="."]
margin_left = 32.0
margin_top = 791.0
margin_right = 1888.0
margin_bottom = 1016.0
texture = ExtResource( 6 )
stretch_mode = 1

[node name="TextoDialogo" type="Label" parent="."]
margin_left = 187.0
margin_top = 863.0
margin_right = 1731.0
margin_bottom = 991.0
custom_fonts/font = ExtResource( 7 )
text = "{modelo}"
autowrap = true

[node name="CaixaPersonagem" type="TextureRect" parent="."]
margin_left = 96.0
margin_top = 757.0
margin_right = 1193.0
margin_bottom = 891.0
rect_scale = Vector2( 0.43, 0.53 )
texture = ExtResource( 8 )
stretch_mode = 5

[node name="TextoPersonagem" type="Label" parent="."]
margin_left = 196.0
margin_top = 763.0
margin_right = 491.0
margin_bottom = 823.0
custom_fonts/font = ExtResource( 9 )
text = "{modelo}"
align = 1
valign = 1

[node name="Seguinte" type="TextureButton" parent="."]
margin_left = 1790.18
margin_top = 476.0
margin_right = 2043.18
margin_bottom = 954.0
rect_scale = Vector2( 0.27, 0.27 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )
stretch_mode = 4

[node name="Escolhas" type="Control" parent="."]
editor/display_folded = true
margin_right = 1920.0
margin_bottom = 1080.0

[node name="ColorRect" type="ColorRect" parent="Escolhas"]
margin_left = -6.10352e-005
margin_top = -3.05176e-005
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.305882, 0.305882, 0.305882, 0.490196 )

[node name="Escolha1" type="TextureButton" parent="Escolhas"]
margin_left = 655.0
margin_top = 296.0
margin_right = 1264.0
margin_bottom = 399.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
stretch_mode = 4

[node name="Label1" type="Label" parent="Escolhas"]
margin_left = 671.0
margin_top = 311.393
margin_right = 1247.0
margin_bottom = 383.393
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Opcao a"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Escolha2" type="TextureButton" parent="Escolhas"]
margin_left = 655.0
margin_top = 456.0
margin_right = 1264.0
margin_bottom = 559.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
stretch_mode = 4

[node name="Label2" type="Label" parent="Escolhas"]
margin_left = 671.0
margin_top = 468.184
margin_right = 1247.0
margin_bottom = 540.184
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Opcao b"
align = 1
valign = 1
autowrap = true

[node name="Opcoes" parent="." instance=ExtResource( 16 )]
margin_left = 1318.0
margin_right = 1888.0

[connection signal="button_up" from="Seguinte" to="." method="_on_Seguinte_button_up"]
[connection signal="button_up" from="Escolhas/Escolha1" to="." method="_on_Escolha1_button_up"]
[connection signal="button_up" from="Escolhas/Escolha2" to="." method="_on_Escolha2_button_up"]
